<resources>
    <string name="app_name">MediaRelay</string>
    <string name="channel_name">Channel ID</string>
    <string name="enter_room">Enter Room</string>
    <string name="select_role">Role:</string>
    <string name="role_broadcaster">Broadcaster</string>
    <string name="role_audience">Audience</string>
    <string name="enter_pk_channel_id">Enter PK Channel Id</string>
    <string name="confirm">Confirm</string>
    <string name="pk">PK</string>
    <string name="start_pk">Start PK</string>
    <string name="stop_pk">Stop PK</string>
    <string name="start_pk_zego">Start PK zego</string>
    <string name="stop_pk_zego">Stop PK zego</string>
    <string name="start_pk_agora">Start PK agora</string>
    <string name="stop_pk_agora">Stop PK agora</string>
    <string name="rtc_audience">switch Rtc Audience</string>
    <string name="cdn_audience">switch CDN Audience</string>
    <string name="select_resolution">Resolution:</string>
    <string name="resolution_1080p">1080p</string>
    <string name="resolution_540p">540p</string>
    <string name="resolution_720p">720p</string>
    <string name="resolution_auto">Auto</string>
    <string name="resolution">Resolution</string>
    <string name="push_url">Push url</string>
    <string name="pull_url">Pull url</string>
    <string name="frame_rate">Frame Rate:</string>
    <string name="bitrate">Bitrate(kbps)</string>
    <string name="app_id">AppID:</string>
    <string name="select_cdn">CDN:</string>
    <string name="user_account">User Account</string>
    <string name="quic">Quic</string>
    <string name="switch_src_timeout">switch src timeout (Second)</string>
    <string name="switch_camera">Switch</string>
    <string name="scenes">Scenes:</string>
    <string name="scene_single">1 anchor</string>
    <string name="scene_3">3 </string>
    <string name="scene_4">4 </string>
    <string name="scene_multi">multi-anchor</string>
    <string name="calling">Calling</string>
    <string name="hang_up">Hang Up</string>
    <string name="changing_roles">Changing roles</string>
    <string name="click_too_fast">Click too fast</string>

    <string name="dashboard_bitrate">Bitrate: %s kbps</string>
    <string name="dashboard_up_bitrate">Send Bitrate: %s kbps</string>
    <string name="dashboard_down_bitrate">Receive Bitrate: %s kbps</string>
    <string name="dashboard_fps">FPS: %s fps</string>
    <string name="dashboard_delay">Latency: %s ms</string>
    <string name="dashboard_loss_package">Packet Loss: %s ％</string>
    <string name="dashboard_up_net_speech">Uplink Speed: %s KB/s</string>
    <string name="dashboard_down_net_speech">Downlink Speed: %s KB/s</string>
    <string name="dashboard_resolution">Resolution: %s</string>
    <string name="dashboard_up">Sender</string>
    <string name="dashboard_encode_resolution">Encode Resolution: %s</string>
    <string name="dashboard_encode_fps">Encode FPS: %s fps</string>
    <string name="dashboard_up_loss_package">Uplink Packet Loss: %s ％</string>
    <string name="dashboard_down">Receiver</string>
    <string name="dashboard_receive_resolution">Received Resolution: %s</string>
    <string name="dashboard_receive_fps">Received FPS: %s fps</string>
    <string name="dashboard_down_loss_package">Downlink Packet Loss: %s ％</string>
    <string name="dashboard_else">Others</string>
    <string name="dashboard_quick_start_time">First Frame: %s ms</string>
    <string name="commerce_device_grade">Device Level: %s</string>
    <string name="dashboard_sr">Super Resolution: %s</string>
    <string name="dashboard_pvc">PVC: %s</string>
    <string name="dashboard_low_stream">Low-quality Video Stream: %s</string>
    <string name="dashboard_svc">SVC: %s</string>
    <string name="dashboard_h265">H265: %s</string>
    <string name="dashboard_device_score">DeviceScore: %s</string>
    <string name="switch_src_success">Switch src success</string>
    <string name="switch_src_failed">Switch src failed</string>
    <string name="play_gift_success">Play alpha gift success</string>
    <string name="play_gift_failed">Play alpha gift failed</string>
</resources>