<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LivingFragment">

    <FrameLayout
        android:id="@+id/layout_video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/videoPKLayout"
        layout="@layout/view_video_pk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="12dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_channel_id"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        tools:text="123" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_channel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:hint="@string/enter_pk_channel_id"
        android:textColorHint="#FFD34D"
        app:boxBackgroundColor="#33A0C5FF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="#FFD34D"
        app:hintTextColor="#FFD34D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal70">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pk_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="7"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textCursorDrawable="@drawable/bg_edit_cursor"
            tools:text="123" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bt_submit_pk"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_btn_primary_r24"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/start_pk"
        android:textColor="#282828"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/layout_channel"
        app:layout_constraintStart_toEndOf="@id/layout_channel"
        app:layout_constraintTop_toTopOf="@id/layout_channel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_pk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="layout_channel,bt_submit_pk"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_zego"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:hint="Enter Zego RoomId"
        android:textColorHint="#FFD34D"
        app:boxBackgroundColor="#33A0C5FF"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="#FFD34D"
        app:hintTextColor="#FFD34D"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_channel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_zego_roomid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="7"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textCursorDrawable="@drawable/bg_edit_cursor"
            tools:text="123" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bt_pk_zego"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_btn_primary_r24"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="StartPk Zego"
        android:textColor="#282828"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/layout_zego"
        app:layout_constraintStart_toEndOf="@id/layout_zego"
        app:layout_constraintTop_toTopOf="@id/layout_zego" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_pk_zego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="layout_zego,bt_pk_zego"/>

    <TextView
        android:id="@+id/bt_switch_stream"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_btn_primary_r24"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/cdn_audience"
        android:textColor="#282828"
        android:textSize="12sp"
        tools:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <TextView
        android:id="@+id/bt_switch_carma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/switch_camera"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:paddingHorizontal="12dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageView
        android:id="@+id/bt_mute_mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_mic_on"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toStartOf="@+id/bt_switch_carma"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageView
        android:id="@+id/bt_mute_carma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_camera_on"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toStartOf="@+id/bt_mute_mic"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageView
        android:id="@+id/bt_dashboard"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/bt_bitrate"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:text="720p"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_arrow_down"
        app:layout_constraintStart_toEndOf="@id/bt_dashboard"
        app:layout_constraintTop_toTopOf="@id/bt_dashboard"
        app:layout_constraintBottom_toBottomOf="@id/bt_dashboard"/>

    <TextView
        android:id="@+id/bt_alpha_gift"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_marginStart="8dp"
        android:paddingVertical="4dp"
        android:text="send gift"
        android:drawablePadding="4dp"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/bt_bitrate"
        app:layout_constraintTop_toTopOf="@id/bt_dashboard"
        app:layout_constraintBottom_toBottomOf="@id/bt_dashboard"/>

    <TextView
        android:id="@+id/cdnDiffTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_dashboard"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/bt_dashboard"/>

    <FrameLayout
        android:id="@+id/fl_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_dashboard"
        tools:visibility="visible"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupBroadcaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="bt_mute_carma,bt_mute_mic,bt_switch_carma,
layout_channel,bt_submit_pk,layout_zego,bt_pk_zego" />

</androidx.constraintlayout.widget.ConstraintLayout>